codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__empty.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 7511
expression: terminal.backend()
---
"                                                                                                    "
"› 向云熙专利智能体提出任何需求                                                                      " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? for shortcuts                                                                100% context left  "
